--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,33 +1,50 @@
+# -------------------------------------------------
+# Project‑level configuration (only allowed keys here)
+# -------------------------------------------------
 project:
   type: website
-  title: "llm-optimizer"
-  output-dir: "docs" # Output directory for the website
-  base-url: "https://github.com/lacg/llm-optimizer" # Base URL for the website
-  theme: "quarto::darkly" # Theme to use for the website
-  favicon: "favicon.ico" # Favicon file
-  logo: "logo.png" # Logo file
-  logo-alt: "LLM Optimizer logo" # Alt text for the logo
-  description: "A website for the LLM Optimizer project" # Description of the website
-  author: "Luiz Alberto Crispiniano Garcia" # Author of the website
-  date: "2025-11-11" # Date of the website
-  license: "CC BY 4.0 NC" # License for the website
+  output-dir: docs               # folder that GitHub Pages will serve
+  title: "llm-optimizer"        # optional generic title
 
-collections:
-  - name: "posts"
-    input: "posts"
-    output: "posts"
-    # Additional configuration options for the posts collection
-    # You can add more configuration options here
+# -------------------------------------------------
+# Global metadata – these become defaults for every .qmd
+# -------------------------------------------------
+author: "Luiz Alberto Crispiniano Garcia"
+date: "2025-11-11"
+license: "CC BY 4.0 NC"
 
-format:
-  html:
-    theme: "darkly"
-
+# -------------------------------------------------
+# Site‑wide options (branding, navigation, footer, etc.)
+# -------------------------------------------------
 website:
   title: "LLM Optimizer"
+  description: "A website for the LLM Optimizer project"
+  site-url: "https://lacg.github.io/llm-optimizer"
+  favicon: "favicon.ico"
+
+  # ---- Navigation bar -------------------------------------------------
   navbar:
+    # Logo belongs here (not at the top level of `website`)
+    logo: "logo.png"
+    logo-alt: "LLM Optimizer logo"
+
     left:
       - text: Home
         href: index.qmd
       - text: About
         href: about.qmd
+
+# -------------------------------------------------
+# Collections (e.g., blog posts)
+# -------------------------------------------------
+collections:
+  - name: "posts"
+    input: "posts"
+    output: "posts"
+
+# -------------------------------------------------
+# Output format options (theme, etc.)
+# -------------------------------------------------
+format:
+  html:
+    theme: "darkly"
