Fixing Blog links.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,7 @@ collections:
     title: "Blog"
     input: "posts"
     output: "posts"
+    sort: date
 
 # -------------------------------------------------
 # Output format options (theme, etc.)
