--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ project:
 # -------------------------------------------------
 author: "Luiz Alberto Crispiniano Garcia"
 date: "2025-11-11"
-license: "CC BY-NC 4.0"
+license: "CC BY-NC-SA 4.0"
 
 # -------------------------------------------------
 # Site‑wide options (branding, navigation, footer, etc.)
