--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,3 +52,6 @@ collections:
 format:
   html:
     theme: "darkly"
+    html:
+      footer: |
+        <p>© 2025 Luiz Alberto Crispiniano Garcia - Content licensed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC‑BY-NC-SA‑4.0</a></p>.
